src/style.css
:root {
  font-family: 'Roboto Mono', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #006d64;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

* { margin: 0; }

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
  text-align: center;
}

h1 {
  font-size: 2.6em;
  line-height: 1.1;
  font-family: 'Bruno Ace SC', cursive;
}

#app {
  width: clamp(320px, 50%, 400px);
  margin: 0 auto;
  padding: 2rem;
}

.logo {
  height: 4em;
  will-change: filter;
  transition: filter 300ms;
  margin: 1em;
  border-radius: 1em;
}
.card {
  margin-top: 0.5em;
  font-size: 3em;
  display: flex;
  flex-direction: column;
  text-align: center;
  gap: 1em;
  margin-top: 1em;
}

.card input {
  font-size: 0.75em;
  line-height: 1;
  width: 1ch;
  margin: 0.05em;
  padding: 0.25em;
  font-family: 'Roboto Mono', system-ui, sans-serif;
  border: 1px solid #006d64;
  color: #009f91;
  border-radius: 0.1em;
}
.card input::placeholder{ color: #009f91; }

#distance-input {
  width: 6ch;
  text-align: right;
}

.time-display, .distance-display, .distance-units {
  display: flex;
  align-items: center;
  justify-content: center;
}
.time-display span { font-size: 0.5em;}

.distance-display, .distance-units {
  gap: 0.25em;
}

#result {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 0.8em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  /* cursor: pointer; */
  color: #ffffff;

  display: flex;
  flex-direction: column;
}

#result.swap {
  flex-direction: column-reverse;
}

.secondary{
  font-size: 0.5em;
}

.drop-shadow { box-shadow: 0 0 1em -0.5em #000; }

@media (prefers-color-scheme: light) {
  :root {
    color: #009f91;
    background-color: #ffffff;

  }
  .drop-shadow {
    box-shadow: 0 0 4em -1em #009f91;
  }

}

